Initial unittest for KRaft authorizer